force-app/main/default/objects/CP_Gift__c/CP_Gift__c.object-meta.xml
<CustomObject>
    <label>CP Gift</label>
    <nameField>
        <label>CP Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>