force-app/main/default/objects/CP_Gift__c/fields/Date_Gift_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Gift_Sent__c</fullName>
    <label>Date Gift Sent</label>
    <type>Date</type>
</CustomField>