force-app/main/default/objects/CP_Gift__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift</label>
    <referenceTo>CX_Gift__c</referenceTo>
    <relationshipLabel>CP Gifts</relationshipLabel>
    <relationshipName>CP_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>