force-app/main/default/objects/CP_Gift__c/fields/Occassion__c.field-meta.xml
<CustomField>
    <fullName>Occassion__c</fullName>
    <label>Occassion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occasion</valueSetName>
    </valueSet>
</CustomField>