force-app/main/default/objects/CP_Gift__c/fields/Related_Id_Updated__c.field-meta.xml
<CustomField>
    <fullName>Related_Id_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Id Updated</label>
    <type>Checkbox</type>
</CustomField>